# ai-email

./: .env  Dockerfile  contacts.csv  pyproject.toml  requirements-dev.txt  requirements.txt
app/: email_template.html  initial_data.py  main.py  models.py
app/api/: api.py  deps.py  email_type.py
app/core/: config.py  session.py
app/email_templates/: email_template1.html  email_template2.html
app/schemas/: requests.py  responses.py
app/templates/: campaign_links.html  campaigns.html
app/utils/: segmentation.py  utils.py
